--- a/FoodDelivery/flyway.properties
+++ b/FoodDelivery/flyway.properties
@@ -1,5 +1,5 @@
-flyway.driver=com.mysql.cj.jdbc.Driver
-flyway.url=jdbc:mysql://127.0.0.1:32768/fooddelivery
+flyway.driver=org.postgresql.Driver
+flyway.url=jdbc:postgresql://localhost:5432/fooddelivery
 flyway.user=root
 flyway.password=root
 flyway.locations=filesystem:src/main/resources/db/migration
