--- a/FoodDelivery/src/main/resources/application.properties
+++ b/FoodDelivery/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# DataSource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/fooddelivery
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Flyway Configuration
+spring.flyway.locations=classpath:db/migrations
+spring.flyway.baseline-on-migrate=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
