--- a/FoodDelivery/src/main/resources/application.properties
+++ b/FoodDelivery/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+debug=true
