added geolocation and fixed naming issues

--- a/FoodDelivery/src/main/resources/application.properties
+++ b/FoodDelivery/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 debug=true
+
+spring.jpa.hibernate.ddl-auto=update
+geocoding.nominatim.email=bruno.galic02@gmail.com
