--- a/FoodDelivery/pom.xml
+++ b/FoodDelivery/pom.xml
@@ -103,6 +103,26 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Add the geocoding-spring-boot-autoconfigure module -->
+        <dependency>
+            <groupId>io.redlink.geocoding</groupId>
+            <artifactId>geocoding-spring-boot-autoconfigure</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <!-- Add the geocoding-osm module for OpenStreetMap's Nominatim service -->
+        <dependency>
+            <groupId>io.redlink.geocoding</groupId>
+            <artifactId>geocoding-osm</artifactId>
+            <version>2.1.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.redlink.geocoding</groupId>
+            <artifactId>geocoding-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+
     </dependencies>
 
 	<build>
