--- a/FoodDelivery/pom.xml
+++ b/FoodDelivery/pom.xml
@@ -22,62 +22,76 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.2.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.2.1</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>3.2.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>${flyway.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
-            <version>5.5.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>1.4.2.Final</version>
         </dependency>
+
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
@@ -94,6 +108,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <version>2.2.220</version>
             <scope>test</scope>
         </dependency>
 
@@ -103,12 +118,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Add the geocoding-spring-boot-autoconfigure module -->
-        <dependency>
-            <groupId>io.redlink.geocoding</groupId>
-            <artifactId>geocoding-spring-boot-autoconfigure</artifactId>
-            <version>2.1.1</version>
-        </dependency>
+
         <!-- Add the geocoding-osm module for OpenStreetMap's Nominatim service -->
         <dependency>
             <groupId>io.redlink.geocoding</groupId>
@@ -116,11 +126,13 @@
             <version>2.1.1</version>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>io.redlink.geocoding</groupId>
             <artifactId>geocoding-api</artifactId>
             <version>2.1.1</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/global.maplink/geocode-schema -->
         <dependency>
             <groupId>global.maplink</groupId>
@@ -128,6 +140,26 @@
             <version>1.5.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.graphhopper/graphhopper-reader-osm -->
+        <dependency>
+            <groupId>com.graphhopper</groupId>
+            <artifactId>graphhopper-reader-osm</artifactId>
+            <version>3.0-pre3</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.graphhopper/graphhopper-core -->
+        <dependency>
+            <groupId>com.graphhopper</groupId>
+            <artifactId>graphhopper-core</artifactId>
+            <version>8.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.0</version>
+        </dependency>
 
 
     </dependencies>
