--- a/FoodDelivery/pom.xml
+++ b/FoodDelivery/pom.xml
@@ -161,6 +161,14 @@
             <version>2.16.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>6.2.1</version>
+        </dependency>
+
+
 
     </dependencies>
 
