--- a/FoodDelivery/pom.xml
+++ b/FoodDelivery/pom.xml
@@ -168,6 +168,23 @@
             <version>6.2.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery.ajax -->
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>jquery.ajax</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-util-ajax -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-util-ajax</artifactId>
+            <version>12.0.5</version>
+        </dependency>
+
+
+
+
+
 
 
     </dependencies>
